[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bpp-af"
version = "0.0.1"
authors = [
  { name="Nico Strasdat", email="nstrasdat@gmail.com" },
]
description = "Arcflow Model for the Bin-Packing Problem"
readme = "README.md"
requires-python = ">=3.9"
classifiers = []
dependencies = [
  "mip"
]

[project.urls]
Homepage = "https://github.com/wotzlaff/bpp-af"
Issues = "https://github.com/wotzlaff/bpp-af/issues"